update swagger doc. removed limiter
